--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,7 @@
 {
   "functions": {
-    "api/index.php": {
-      "runtime": "vercel-php@0.6.1"
+    "api/*.php": {
+      "runtime": "vercel-php@0.7.1"
     }
-  },
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/api/index.php"
-    }
-  ]
+  }
 }
